# communicate

./: CMakeLists.txt  main.cpp
lib/include/: setup.h
lib/src/: setup.cpp
